packages/kotlin/ttrp-frontend/src/test/resources/corpus/ttr-pandas/reject/TTRP-PD-005.ttrp
// expect: TTRP-PD-005
container c target polars """pandas
for x in items
"""
